static/css/index.css
/* ... */
/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden {
  clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

/* Posts list */
.postlist {
  list-style: none;
  line-height: 1.7;
  padding-left: 0px;
}

.postlist li {
  align-items: center;
  display: flex;
  padding: 0.7rem 0;
  /* border-bottom: 1px solid var(--accent-bg); */
}

.postlist li time {
  padding-right: 1rem;
  font-size: 0.8125em;
  color: var(--border);
  font-style: italic;
}

.postlist li a {
  display: inline-block;
  font-weight: 700;
	text-underline-position: from-font;
	text-decoration-thickness: 1px;
  margin-right: 0;
  text-align: left;
  font-family: var(--serif-font);
  font-size: 1.4rem;
}

.postlist li a:hover {
  background: none;
  color: var(--text-color-postlink-hover);
} 

.postlist li img {
  margin-left: auto;
  margin-right: auto;
}

@media only screen and (max-width: 720px) {
  .postlist li a {
    font-size: 1.15rem;
  }
}

/* Tags list */
.post-metadata {
	display: inline-flex;
	flex-wrap: wrap;
	gap: .5em;
	list-style: none;
	padding: 0;
	margin: 0;
  font-size: 1.15rem;
}
.post-metadata time {
	margin-right: 1em;
  font-style: italic;;
}

/* Direct Links / Markdown Headers */
.zola-anchor {
	text-decoration: none;
	font-style: normal;
	font-size: 1em;
	margin-left: .1em;
}
a[href].zola-anchor,
a[href].zola-anchor:visited {
	color: transparent;
}
a[href].zola-anchor:focus,
a[href].zola-anchor:hover {
	text-decoration: underline;
  background: none;
}
a[href].zola-anchor:focus,
:hover > a[href].zola-anchor {
	color: var(--text);
}

/* Tags */
.post-tag {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	text-transform: capitalize;
	font-style: italic;
}
.postlist-item > .post-tag {
	align-self: center;
}

/* previous and next post links (li) */
.links-nextprev {
	list-style: none;
	border-top: 1px dashed var(--border-light);
  border-bottom: 1px dashed var(--border-light);
	padding: 1.5em 0;
  font-style: italic;
  margin: 3.5rem auto;
}

.small {
  font-size: 1rem;
}

.img-centered {
  max-width: 100%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.img-border {
  border: 2px solid var(--border);
}

.img-avatar {
  max-width: 100%;
  display: block;
  margin: 2.5em auto;
  border-radius: 75%;
}

.post-footer {
  text-align: center;
  margin: 4rem 0 1rem 0;
}

.reply {
  font-size: 20px;
  font-weight: 500;
  padding: 20px 40px;
  text-align: center;
  display: inline-block;
}

.button-shadow {
  box-shadow: 1px 1px 0 0 var(--text);
  transition: all .1s ease;
}

.button-shadow:hover {
  color:var(--text);
  box-shadow:0 0 0 0 var(--text);
  border-color:var(--text)!important
 }

 .links-quote {
  color:var(--text-dark);
  background:var(--bg);
  border:3px solid var(--text-dark);
  margin:var(--larger-margin);
  padding:1.5rem;
 }


/* Taxonomies */
.taxonomies-list li {
  display: inline-block;
  margin: 10px;
  font-weight: 500;
}

.taxonomies-list a {
  display: block;
  padding: 3px 10px;
  background: var(--accent-bg);
  border-radius: 6px;
  transition: transform 0.1s;
  text-decoration: none;
}
.taxonomies-list a:hover {
  background: var(--text-color-postlink-hover);
  color: var(--accent-bg);
}
.taxonomies-list a:active {
  background: var(--accent);
  transform: scale(0.96);
}

/* single taxonomies */
.taxonomy {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.taxonomy-item {
  padding: 5px 20px;
  border-left: 1px solid var(--border-light);
}

.taxonomy-item a {
  text-decoration: none;
}

.taxonomy-item:hover {
  border-left: 3px solid var(--accent);
}

.taxonomy-item-time {
  margin-right: 10px;
  color: var(--border)
}

.pagination a {
  text-decoration: underline;
  text-decoration-thickness: 0.12rem;
}

.pagination a:hover {
  text-decoration: none;
  background: var(--text-color-link-hover);
  border-radius: 5px;
  color: var(--text-dark);
}

.page-nav {
  display: flex;
  margin-top: 6rem;
  border-top: 1px dashed var(--border);
  font-style: italic;
  line-height: 1.5;
}
.page-nav .page-nav-item {
  font-weight: 600;
  width: 50%;
  padding-top: 1rem;
  text-decoration: none;
}
.page-nav .page-nav-item:hover .page-title {
  color: var(--text-color-postlink-hover);
}
.page-nav .page-nav-item:nth-child(2n + 1) {
  padding-left: 0;
  padding-right: 1rem;
}
.page-nav .page-nav-item:nth-child(2n) {
  text-align: right;
  padding-right: 0;
  padding-left: 1rem;
}
.page-nav .page-nav-item .nav-arrow {
  font-weight: 400;
  color: var(--text-light);
  margin-bottom: 0.5rem;
}
.page-nav .page-nav-item .page-title {
  color: var(--text);
  transition: var(--transition);
}

#buttons-container {
  margin: 0;
  padding: 0;
}

#buttons-container p > a:hover {
  background: none;
}

